--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: go
 go:
  - 1.6
+before_install:
+  - go get github.com/mattn/goveralls
+script:
+  - $HOME/gopath/bin/goveralls -service=travis-ci
